[package]
name = "rskit"
version = "0.0.3"
edition = "2021"
license = "MIT"
description="rust kit"
repository = "https://github.com/itooling/rskit"


[lib]


[dependencies]
log = "0.4.21"
fast_log = "1.6.12"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
base64 = "0.22.1"
bincode = "1.3.3"
hex="0.4.3"
hex-literal="0.3.3"
cbc = { version = "0.1.2", features = ["std"] }
aes = "0.8.4"
